--- a/index.html
+++ b/index.html
@@ -15,3 +15,214 @@
 
       <title>Mohamed Maher</title>
    </head>
+   <body>
+    <!--==================== HEADER ====================-->
+    <header class="header" id="header">
+       <div class="nav container">
+          <a href="index.html" class="nav__logo">
+            Mohamed 
+          </a>
+          <div class="nav__menu " id="nav-menu">
+             <ul class="nav__list">
+                <li class="nav__item">
+                   <a href="#home" class="nav__link">Home</a>
+                </li>
+
+                <li class="nav__item">
+                   <a href="#work" class="nav__link">Work</a>
+                </li>
+                <li class="nav__item">
+                   <a href="#info" class="nav__link">My Info</a>
+                </li>
+                <li class="nav__item">
+                   <a href="#services" class="nav__link">Services </a>
+                </li>
+
+                <li class="nav__item">
+                   <a href="#contact" class="nav__link">Contact Me</a>
+                </li>
+             </ul>
+             <!-- Close Button -->
+             <div class="nav__close" id="nav-close">
+                <i class="ri-close-line"></i>
+             </div>
+          </div>
+          <!-- TOGGLE BUTTON -->
+          <div class="nav__toggle" id="nav-toggle">
+             <i class="ri-menu-line"></i>
+          </div>
+    </header>
+    
+    <!--==================== MAIN ====================-->
+    <main class="main">
+       <!--==================== HOME ====================-->
+       <section class="home section" id="home">
+          <div class="home__container container grid">
+             <img src="assets/img/myportfolio.webp" alt="home-perfil" class="home__img">
+             <div class="home__data">
+                <h1 class="home__name">Mohamed <br> Maher</h1>
+                <h3 class="home__profession">  Software Engineer</span></h3>
+             </div>
+             <a href="#work" class="home__scroll">
+                <div class="home__scroll-box">
+                   <i class="ri-arrow-down-line"></i>
+                </div>
+                <span class="home__scroll-text">Recent Works</span>
+             </a>
+          </div>
+       </section>
+
+       <!--==================== WORKS ====================-->
+       <section class="work section" id="work">
+          <div class="section__title">RECENT WORKS</div>
+          <div class="work__container container grid">
+             <article class="work__card">
+                <a href="" class="work__link">
+                   <h2 class="work__title">Restaurant Website</h2>
+                   <p class="work__discription">Short description of the project that was 
+                      carried out in this portfolio.</p>
+                   <img src="/assets//img//work-1.jpg" alt="image" class="work__im">
+                   <i class="ri-arrow-right-line"></i>
+                </a>
+             </article>
+
+             <article class="work__card">
+                <a href="" class="work__link">
+                   <h2 class="work__title">Design Of Products</h2>
+                   <p class="work__discription">Short description of the project that was 
+                      carried out in this portfolio.</p>
+                   <img src="/assets//img//work-2.jpg" alt="image" class="work__im">
+                   <i class="ri-arrow-right-line"></i>
+                </a>
+             </article>
+
+             <article class="work__card">
+                <a href="" class="work__link">
+                   <h2 class="work__title">Barbershop Website SEO</h2>
+                   <p class="work__discription">Short description of the project that was 
+                      carried out in this portfolio.</p>
+                   <img src="/assets//img//work-3.jpg" alt="image" class="work__im">
+                   <i class="ri-arrow-right-line"></i>
+                </a>
+             </article>
+
+             <article class="work__card">
+                <a href="" class="work__link">
+                   <h2 class="work__title">Coffee Website</h2>
+                   <p class="work__discription">Short description of the project that was 
+                      carried out in this portfolio.</p>
+                   <img src="/assets//img//work-4.jpg" alt="image" class="work__im">
+                   <i class="ri-arrow-right-line"></i>
+                </a>
+             </article>
+
+             <article class="work__card">
+                <a href="" class="work__link">
+                   <h2 class="work__title">Panel Design</h2>
+                   <p class="work__discription">Short description of the project that was 
+                      carried out in this portfolio.</p>
+                   <img src="/assets//img//work-5.jpg" alt="image" class="work__im">
+                   <i class="ri-arrow-right-line"></i>
+                </a>
+             </article>
+          </div>
+       </section>
+
+       <!--==================== INFO ====================-->
+       <section class="info section" id="info">
+          <div class="section__title">MY INFO</div>
+          <div class="info__container container grid">
+             <!-- About -->
+              <div class="about grid">
+                <div class="about__content">
+                   <h3 class="info__title">About Me</h3>
+                   <p class="about__description">Passionate about creating <b>websites with beautiful interfaces</b>.
+                      I have years of experience in  <b>Web Development</b> with several 
+                      projects completed.</p>
+                      <a href="assets/pdf/MohamedMaher.pdf" target="_blank" download="" class="button about__button">Download CV</a>
+                </div>
+                <img src="/assets/img/myportfolio.webp"  alt="image" class="about__img">
+              </div>
+               <!-- experience -->
+               <div class="experience">
+                <h3 class="info__title">Experience</h3>
+                <div class="experience__content grid">
+                   <div class="experience__data grid">
+                      <h2 class="experience__company">Discord</h2>
+                      <div>
+                         <div class="experience__proffesion">Web Product Designer</div>
+                         <span class="experience__data">05/23 - Present</span>
+                         <p class="experience__description">Short description of the work you do or did 
+                            in the company.
+                            </p>
+                      </div>
+                   </div>
+
+                   <div class="experience__data grid">
+                      <h2 class="experience__company">Google</h2>
+                      <div>
+                         <div class="experience__proffesion">Web Developer</div>
+                         <span class="experience__data">05/21 - 02/22</span>
+                         <p class="experience__description">Short description of the work you do or did 
+                            in the company.
+                            </p>
+                      </div>
+                   </div>
+
+                   <div class="experience__data grid">
+                      <h2 class="experience__company">Adobe</h2>
+                      <div>
+                         <div class="experience__proffesion">Web Designer</div>
+                         <span class="experience__data">01/20 - 03/21</span>
+                         <p class="experience__description">Short description of the work you do or did 
+                            in the company.
+                            </p>
+                      </div>
+                   </div>
+                </div>
+               </div>
+                <!-- Skills -->
+              <div class="skills">
+                <h3 class="info__title">Skills</h3>
+                <div class="skills__content grid">
+                   <div class="skills__box">
+                      <img src="assets/img/info-html.svg" alt="image" class="skills__img">
+                      <span class="skills__name">HTML</span>
+                   </div>
+                   <div class="skills__box">
+                      <img src="assets/img/info-css.svg" alt="image" class="skills__img">
+                      <span class="skills__name">CSS</span>
+                   </div>
+                   <div class="skills__box">
+                      <img src="assets/img/info-javascript.svg" alt="image" class="skills__img">
+                      <span class="skills__name">JavaScript</span>
+                   </div>
+                   <div class="skills__box">
+                      <img src="assets/img/info-react.svg" alt="image" class="skills__img">
+                      <span class="skills__name">React</span>
+                   </div>
+                   <div class="skills__box">
+                      <img src="assets/img/info-git.svg" alt="image" class="skills__img">
+                      <span class="skills__name">Git</span>
+                   </div>
+                   <div class="skills__box">
+                      <img src="assets/img/info-github.svg" alt="image" class="skills__img">
+                      <span class="skills__name">GitHub</span>
+                   </div>
+                   <div class="skills__box">
+                      <img src="assets/img/info-tailwind-css.svg" alt="image" class="skills__img">
+                      <span class="skills__name">Tailwind CSS</span>
+                   </div>
+                   <div class="skills__box">
+                      <img src="assets/img/info-sass.svg" alt="image" class="skills__img">
+                      <span class="skills__name">Sass</span>
+                   </div>
+                   <div class="skills__box">
+                      <img src="assets/img/info-figma.svg " alt="image" class="skills__img">
+                      <span class="skills__name">Figma</span>
+                   </div>
+
+                </div>
+              </div>
+          </div>
+       </section>
