--- a/index.html
+++ b/index.html
@@ -226,3 +226,103 @@
               </div>
           </div>
        </section>
+
+         <!--==================== SERVICES ====================-->
+         <section class="services section" id="services">
+            <h2 class="section__title">SERVICES</h2>
+            <div class="services__container container grid">
+               <article class="services__card">
+                  <i class="ri-code-box-line services__icon"></i>
+                  <h3 class="services__title">Web Development</h3>
+                  <p class="services__description">Short description of the service offered to users 
+                     to obtain a personalized project.</p>
+               </article>
+               <article class="services__card">
+                  <i class="ri-pencil-ruler-2-line services__icon"></i>
+                  <h3 class="services__title">Responsive Web Design</h3>
+                  <p class="services__description">Short description of the service offered to users 
+                     to obtain a personalized project.</p>
+               </article>
+               <article class="services__card">
+                  <i class="ri-seo-line services__icon"></i>
+                  <h3 class="services__title">Seo (Web Pages)</h3>
+                  <p class="services__description">Short description of the service offered to users 
+                     to obtain a personalized project.</p>
+                  </article>
+                  <article class="services__card">
+                  <i class="ri-layout-3-line services__icon"></i>
+                  <h3 class="services__title">Web Design</h3>
+                  <p class="services__description">Short description of the service offered to users 
+                     to obtain a personalized project.</p>
+               </article>
+            </div>
+
+         </section>
+
+         <!--==================== CONTACT ====================-->
+         <section class="contact section" id="contact">
+            <h2 class="section__title">CONTACT ME</h2>
+            <div class="contact__container container grid">
+               <form action="" class="contact__form grid" id="contact-form">
+                  <div class="contact__group grid">
+                     <input type="text" name="user_name" required placeholder="Name" class="contact__input">
+                     <input type="email" name="user_email" required placeholder="Email" class="contact__input">
+                  </div>
+                  <textarea name="user_message" placeholder="Message" class="contact__area contact__input"></textarea>
+                  <button type="submit" class="button contact__button">Send Message</button>
+                  <p class="contact__message" id="contact-message"></p>
+               </form>
+               <div class="contact__social grid">
+                  <a href="" target="_blank" class="contact__social-link">
+                     <i class="ri-facebook-circle-line"></i>
+                     <span>Facebook</span>
+                  </a>
+                  <a href="" target="_blank" class="contact__social-link">
+                     <i class="ri-instagram-line"></i>
+                     <span>Instegram</span>
+                  </a>
+                  <a href="" target="_blank" class="contact__social-link">
+                     <i class="ri-linkedin-box-line"></i>
+                     <span>Linkedin</span>
+                  </a>
+               </div>
+            </div>
+         </section>
+      </main>
+
+      <!--==================== FOOTER ====================-->
+      <footer class="footer">
+         <div class="footer__container container grid">
+            <ul class="footer__links grid">
+               <li>
+                  <a href="#home" class="footer__link">Home</a>
+               </li>
+
+               <li>
+                  <a href="#work" class="footer__link">Work</a>
+               </li>
+
+               <li>
+                  <a href="#info" class="footer__link">Info</a>
+               </li>
+            </ul>
+            <span class="footer__copy">&#169; All Rights Reserved By Mohamed Maher
+            </span>
+         </div>
+      </footer>
+
+      <!--========== SCROLL UP ==========-->
+      <a href="#" class="scroll__up" id="scroll-up">
+         <i class="ri-arrow-up-line"></i>
+      </a>
+
+      <!--=============== SCROLLREVEAL ===============-->
+      <script src="assets/js/scrollreveal.min.js"></script>
+
+      <!--=============== EMAIL JS ===============-->
+      <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+
+      <!--=============== MAIN JS ===============-->
+      <script src="assets/js/main.js"></script>
+   </body>
+</html>
